# aoc-2023

./: .gitignore  README.md  pyproject.toml
src/: cli.py  utils.py
src/day01/: main.py
src/year2023/day01/: main.py
src/year2023/day02/: main.py
src/year2023/day03/: main.py
src/year2023/day04/: main.py
src/year2023/day05/: main.py
src/year2023/day06/: main.py
src/year2023/day07/: main.py
src/year2023/day08/: main.py
src/year2023/day09/: main.py
src/year2023/day10/: main.py
src/year2023/day11/: main.py
